Coding convention updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Visualization
 
 [options]
@@ -38,7 +39,7 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
-    numpy
+    numpy>=1.21
     plotly>=4.0
 
 [options.packages.find]
