Update Python versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = CTS3 Waveform Viewer
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 platform = any
 keywords = NI, CTS3, NFC
 url = https://micropross.ni.com/products/range/contactless-test-station-3
@@ -31,6 +31,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Scientific/Engineering :: Visualization
 
 [options]
