--- a/setup.cfg
+++ b/setup.cfg
@@ -7,15 +7,15 @@ long_description_content_type = text/x-rst
 license = MIT
 license_files = LICENSE
 platform = any
-keywords = NI, CTS3, NFC
+keywords = NI, FIME, CTS3, NFC
 url = https://micropross.ni.com/products/range/contactless-test-station-3
 download_url = https://pypi.org/project/cts3-viewer
 project_urls =
     Code = https://github.com/Micropross/CTS3_viewer
 author = Julien Vannier
-author_email = julien.vannier@ni.com
+author_email = julien.m.vannier@gmail.com
 maintainer = Guillaume Fouilleul
-maintainer_email = guillaume.fouilleul@ni.com
+maintainer_email = guillaume.fouilleul@gmail.com
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
@@ -32,6 +32,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Scientific/Engineering :: Visualization
 
 [options]
